solved map overlap issue by setting the z-index of main to -1, and that of the dropdown to 1000

--- a/src/dropdown.css
+++ b/src/dropdown.css
@@ -17,8 +17,13 @@
 .dropdown-content {
   display: none;
   position: absolute;
+  z-index: 1000;
 }
 
 .dropdown:hover .dropdown-content {
   display: block;
+}
+
+#main {
+  z-index: -1;
 }
